# adk-blueprints

./: .gitignore  LICENSE  main.py  pyproject.toml
docs/examples/github_agent/: .env.example  main.py
docs/examples/gmail_agent/: main.py
docs/examples/redditsearch_agent/: .env.example  main.py
examples/: imagen_agent.py
examples/imagen_paid_agent/: main.py
examples/sqldb_agent/gradex_db_agent/: .env.example  main.py
src/adk_blueprints/: __init__.py  agent_blueprints.py  description_blueprints.py  instruction_blueprints.py  tool_blueprints.py
